--- a/index.html
+++ b/index.html
@@ -2,17 +2,4 @@ table>(tr>td#ids$*3)*5
 
 
 
-asdasdasdasd
-        a
-        sd
-        as
-        d
-        as
-        d
-
-        as
-        d
-        as
-        d
-        as
-        d
+hello world
