Learn JavaScript Function

--- a/index.html
+++ b/index.html
@@ -1,5 +1,33 @@
-table>(tr>td#ids$*3)*5
-
-
-
-hello world
+<html>
+<head><title></title>
+    <meta/>
+</head>
+<body>
+<div id="header" class="head"></div>
+<div id="content" class="body">
+    <table>
+        <tbody>
+        <tr>
+            <td data-num="ihs1"></td>
+            <td data-num="ihs2"></td>
+            <td data-num="ihs3"></td>
+            <td data-num="ihs4"></td>
+            <td data-num="ihs5"></td>
+        </tr>
+        </tbody>
+    </table>
+    <table>
+        <tbody>
+        <tr>
+            <td data-num="ihs1"></td>
+            <td data-num="ihs2"></td>
+            <td data-num="ihs3"></td>
+            <td data-num="ihs4"></td>
+            <td data-num="ihs5"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div id="footer" class="foot"></div>
+</body>
+</html>
